src/test/deca/codegen/valid/plus_int_plus_int_plus_int_codegen.deca
// Description : 
// 
//      Test contextuellement correct de la somme d'un int avec la somme d'un int avec la somme d'un int.
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int y =3+2+5;
    print(y);
}