src/test/deca/codegen/invalid/plus_plus_overflow.deca
// Description :
//
//      Test de programme contextuellement incorrect d'une somme de deux entiers menant à un overflow.
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    int y =99999999999999999999+99999999999999999999999999;
}